# polyparse

./: .coveragerc  .gitignore  DISTRIBUTION.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  RELEASE.md  RUN_TESTS.md  TESTING.md  TEST_SUMMARY.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  setup.py
.github/workflows/: ci.yml  release.yml  test.yml
Formula/: polyparse.rb
polyparse/: auth.py  capture.py  cli.py  driver.py  extractor.py  network.py  parser.py  utils.py
scripts/: generate_formula.sh
tests/: README.md  conftest.py  test_e2e_cli.py  test_e2e_recurring.py  test_integration.py  test_parser.py  test_utils.py
